  old overload will be removed.
- AllBlocksScope now targets all blocks in the .text section, even if they are
  not part of functions.
- Data blocks can now be targetted with insert_at, replace_at, and delete_at.
- Scratch registers are now passed in the insertion context instead of as
  parameters. This is a breaking change.

0.0.24:
- symbolicExpressionSizes is now populated for expressions in code
- The Assembler class gained an option, allow_undef_symbols, that allows
  undefined symbols to be referenced and implicitly created (referring to
  proxy blocks)
- Added support for indirect branches and calls
- get_or_insert_extern_sym now puts proxies in the module's proxies set
- get_or_insert_extern_sym now populates elfSymbolInfo
- Added a command-line gtirb-rewriting driver

0.0.23:
- Dramatically sped up the time spent applying patches with calls

0.0.22:
- Fixed an issue where running rewriting over leaf functions multiple times
  could cause the red zone to be clobbered on 64-bit ELF
- Updated to new ARM symbolic expression types
- Switched to capstone-gt

0.0.21:
- Added support for symbolic expressions in data.
- Fixed CallPatch redundantly aligning the stack
- Made CallPatch default to aligning the stack and preserving caller-saved
  registers. Clients can opt out of this by specifying align_stack=False and
  preserve_caller_saved_registers=False to CallPatch.

0.0.20:
- Added support for ARM64
- Exposed the Assembler class
- Added ABI.temporary_label_prefix and InsertionContext.temporary_label

0.0.19:
- Added support for the .byte directive
- Added support for printing data blocks with show_block_asm

0.0.18:
- Added support for symbolic expressions with a constant addend

0.0.17:
- Exposed the ABI class, to allow transforms to get information about the
  target
- show_block_asm now prints out symbolic expressions

0.0.16:
- Fixed passing symbols as arguments with CallPatch on 64-bit ELF